Added updated example1

--- a/code/01-hello-world/Makefile
+++ b/code/01-hello-world/Makefile
@@ -1,9 +1,9 @@
 #Sample Makefile to demonstrate how to compile the Emu examples
 
-all: hello-world.mwx hello-world-spawn.mwx hello-world-spawn-at.mwx
+all: hello-world-naive.mwx hello-world.mwx hello-world-spawn.mwx hello-world-spawn-at.mwx
 
 .PHONY: sim
-sim: hello-world.tqd hello-world-spawn.tqd hello-world-spawn-at.tqd
+sim: hello-world-naive.tqd hello-world.tqd hello-world-spawn.tqd hello-world-spawn-at.tqd
 
 %.mwx: %.c
 	emu-cc -o $@ $<
@@ -13,4 +13,5 @@ sim: hello-world.tqd hello-world-spawn.tqd hello-world-spawn-at.tqd
 
 .PHONY: clean
 clean:
-	rm -f *.mwx *.tqd *.cdc *.vsf
+	rm -f *.mwx *.tqd *.cdc *.vsf *.mps; \
+	mkdir -p figs && mv *.png figs/.
