Updated environment script and NB1 and Makefile

--- a/code/01-hello-world/Makefile
+++ b/code/01-hello-world/Makefile
@@ -1,7 +1,13 @@
 #Sample Makefile to demonstrate how to compile the Emu examples
 
-INCLUDES=/tools/lucata/pathfinder-sw/current/include/ 
-LIBPATH=/tools/lucata/pathfinder-sw/current/lib
+#Uncomment only one of these lines
+#Use the last stable toolchain
+#TOOLCHAIN=/tools/lucata/pathfinder-sw/current
+#Use the latest beta toolchain
+TOOLCHAIN=/tools/lucata/pathfinder-sw/22.09-beta
+
+INCLUDES=${TOOLCHAIN}/include/ 
+LIBPATH=${TOOLCHAIN}/lib
 LIBRARIES=-lmemoryweb
 
 all: hello-world-naive.mwx hello-world.mwx hello-world-spawn.mwx hello-world-spawn-at.mwx
@@ -13,10 +19,10 @@ sim: hello-world-naive.tqd hello-world.tqd hello-world-spawn.tqd hello-world-spa
 	emu-cc -o $@ -I${INCLUDES} -L${LIBPATH} ${LIBRARIES} $<
 
 %.tqd: %.mwx
-	emusim.x --capture_timing_queues --total_nodes 2 -m 21 -- $<
+	emusim.x --capture_timing_queues --total_nodes 2 -m 24 -- $<
 
 test:  hello-world-naive.mwx
-	emusim.x --capture_timing_queues --total_nodes 1 -m 21 -- $<
+	emusim.x --capture_timing_queues --total_nodes 2 -m 24 -- $<
 
 .PHONY: clean
 clean:
