--- a/code/.env
+++ b/code/.env
@@ -1,4 +1,12 @@
-EMU_TOOLS=/tools/emu/pathfinder-sw/22.02
+# Source this environment to load the correct toolchain
+# Ex: source .env
+
+#Uncomment only one of these lines
+#Use the last stable toolchain
+#EMU_TOOLS=/tools/emu/pathfinder-sw/22.02
+#
+EMU_TOOLS=/tools/emu/pathfinder-sw/22.09-beta
+
 PATH=${EMU_TOOLS}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 LD_LIBRARY_PATH=${EMU_TOOLS}/lib:/usr/lib/x86_64-linux-gnu/
 USER=$USERNAME
