--- a/code/.env
+++ b/code/.env
@@ -3,10 +3,10 @@
 
 #Uncomment only one of these lines
 #Use the last stable toolchain
-#EMU_TOOLS=/tools/emu/pathfinder-sw/22.02
-#
-EMU_TOOLS=/tools/emu/pathfinder-sw/22.09-beta
+#export LUCATA_BASE=/tools/emu/pathfinder-sw/22.02
+#Use the beta toolchain (supports new profiling and counters)
+export LUCATA_BASE=/tools/emu/pathfinder-sw/22.09-beta
 
-PATH=${EMU_TOOLS}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-LD_LIBRARY_PATH=${EMU_TOOLS}/lib:/usr/lib/x86_64-linux-gnu/
+PATH=${LUCATA_BASE}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+LD_LIBRARY_PATH=${LUCATA_BASE}/lib:/usr/lib/x86_64-linux-gnu/
 USER=$USERNAME
