Pushed latest update to env script

--- a/code/.env
+++ b/code/.env
@@ -1,12 +1,22 @@
 # Source this environment to load the correct toolchain
 # Ex: source .env
 
+
 #Uncomment only one of these lines
+#=================================
 #Use the last stable toolchain
 #export LUCATA_BASE=/tools/emu/pathfinder-sw/22.02
+#LUCATA_VERSION=22.02
 #Use the beta toolchain (supports new profiling and counters)
-export LUCATA_BASE=/tools/emu/pathfinder-sw/22.09-beta
+LUCATA_VERSION=22.09-beta
+
+export LUCATA_BASE=/tools/lucata/pathfinder-sw/${LUCATA_VERSION}
 
 PATH=${LUCATA_BASE}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 LD_LIBRARY_PATH=${LUCATA_BASE}/lib:/usr/lib/x86_64-linux-gnu/
 USER=$USERNAME
+
+#Point to libtinfo on notebook.crnch.
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/lib/x86_64-linux-gnu/
+
+echo "Lucata tools are added to current path from $LUCATA_BASE"
