Updated Makefile to allow for testing plots

--- a/code/.env
+++ b/code/.env
@@ -6,9 +6,9 @@
 #=================================
 #Use the last stable toolchain
 #export LUCATA_BASE=/tools/emu/pathfinder-sw/22.02
-#LUCATA_VERSION=22.02
+LUCATA_VERSION=22.02
 #Use the beta toolchain (supports new profiling and counters)
-LUCATA_VERSION=22.09-beta
+#LUCATA_VERSION=22.09-beta
 
 export LUCATA_BASE=/tools/lucata/pathfinder-sw/${LUCATA_VERSION}
 
