--- a/code/01-hello-world/Makefile
+++ b/code/01-hello-world/Makefile
@@ -5,20 +5,27 @@ INCLUDES=${LUCATA_BASE}/include/
 LIBPATH=${LUCATA_BASE}/lib
 LIBRARIES=-lmemoryweb
 
+#You can change this string to plot different applications
+PLOTSRC=hello-world
 
 all: check-env hello-world-naive.mwx hello-world.mwx hello-world-spawn.mwx hello-world-spawn-at.mwx
 
 .PHONY: sim
 sim: hello-world-naive.tqd hello-world.tqd hello-world-spawn.tqd hello-world-spawn-at.tqd
 
+plots:  $(PLOTSRC).tqd $(PLOTSRC).mps $(PLOTSRC).uis
+	make_tqd_plots.py $(PLOTSRC).tqd
+	make_map_plots.py $(PLOTSRC).mps
+	make_uis_plots.py $(PLOTSRC).uis
+
 %.mwx: %.c
 	emu-cc -o $@ -I${INCLUDES} -L${LIBPATH} ${LIBRARIES} $<
 
-%.tqd: %.mwx
-	emusim.x --capture_timing_queues --total_nodes 2 -m 24 -- $<
+%.tqd %.mps: %.mwx
+	emusim.x --capture_timing_queues --output_instruction_count --total_nodes 2 -m 24 -- $<
 
 test:  hello-world-naive.mwx
-	emusim.x --capture_timing_queues --total_nodes 2 -m 24 -- $<
+	emusim.x --total_nodes 2 -m 24 -- $<
 
 .PHONY: clean
 clean:
