--- a/code/.env-beta
+++ b/code/.env-beta
@@ -5,9 +5,9 @@
 #Uncomment only one of these lines
 #=================================
 #Use the last stable toolchain
-LUCATA_VERSION=22.02
+#LUCATA_VERSION=22.02
 #Use the beta toolchain (supports new profiling and counters)
-#LUCATA_VERSION=22.09-beta
+LUCATA_VERSION=22.09-beta
 
 export LUCATA_BASE=/tools/lucata/pathfinder-sw/${LUCATA_VERSION}
 
