--- a/code/.env
+++ b/code/.env
@@ -12,7 +12,7 @@ LUCATA_VERSION=22.02
 export LUCATA_BASE=/tools/lucata/pathfinder-sw/${LUCATA_VERSION}
 
 PATH=${LUCATA_BASE}/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-LD_LIBRARY_PATH=${LUCATA_BASE}/lib:/usr/lib/x86_64-linux-gnu/
+LD_LIBRARY_PATH=${LUCATA_BASE}/lib:/usr/lib64:/usr/lib/x86_64-linux-gnu/
 USER=$USERNAME
 
 echo "Lucata tools are added to current path from $LUCATA_BASE"
