Removing counter read after clearing.

--- a/code/01-hello-world/Makefile
+++ b/code/01-hello-world/Makefile
@@ -37,4 +37,4 @@ endif
 
 #Remove all non-source files
 reallyclean:
-	rm -rf *.mwx *.tqd *.cdc *.vsf *.mps *.uis *.csv *.hpc figs
+	rm -rf *.mwx *.tqd *.cdc *.vsf *.mps *.uis *.csv *.hpc figs profile_${TESTSRC}/*;
